kubernetes/agc-broker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agc-broker
spec:
  replicas: 1
  selector:
    matchLabels:
      component: agc-broker
  template:
    metadata:
      labels:
        component: agc-broker
    spec:
      containers:
      - name: agc-broker
        image: socketcluster/agc-broker:v4.0.0
        ports:
        - containerPort: 8888
        livenessProbe:
          httpGet:
            path: /health-check
            port: 8888
          initialDelaySeconds: 30
          timeoutSeconds: 5
