kubernetes/agc-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agc-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      component: agc-worker
  template:
    metadata:
      labels:
        component: agc-worker
    spec:
      containers:
      - name: agc-worker
        image: socketcluster/asyngular:v3.2.3
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health-check
            port: 8000
          initialDelaySeconds: 30
          timeoutSeconds: 5
