kubernetes/socketcluster-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: socketcluster
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: socketcluster
    spec:
      containers:
      - name: socketcluster
        image: socketcluster/socketcluster:v6.5.0
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health-check
            port: 8000
          initialDelaySeconds: 30
          timeoutSeconds: 5
