kubernetes/agc-state-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agc-state
spec:
  type: ClusterIP
  ports:
  - port: 7777
    targetPort: 7777
  selector:
    component: agc-state
