kubernetes/agc-worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agc-workers
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    component: agc-worker
