kubernetes/sc-cluster-broker-server.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sc-cluster-broker-server
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sc-cluster-broker-server
    spec:
      containers:
      - name: sc-cluster-broker-server
        image: socketcluster/sc-cluster-broker-server:v1.0.2
        ports:
        - containerPort: 8888
---

apiVersion: v1
kind: Service
metadata:
  name: sc-cluster-broker-server
  labels:
    app: sc-cluster-broker-server
spec:
  ports:
  - port: 8888
    targetPort: 8888
  selector:
    app: sc-cluster-broker-server
