kubernetes/scc-broker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scc-broker-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: scc-broker
  ports:
    - port: 8888
      targetPort: 8888
