kubernetes/socketcluster.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: socketcluster
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: socketcluster
    spec:
      containers:
      - name: socketcluster
        image: socketcluster/socketcluster:v5.0.7
        ports:
        - containerPort: 8000
---

apiVersion: v1
kind: Service
metadata:
  name: socketcluster
  labels:
    app: socketcluster
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: socketcluster
